Started CSS; added body
have some typography going on

--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>GDESNews</title>
 </head>
 <body>
-    <img src="./images/logo-gdesnews.png" alt="GDES News red serif logo">
-    <h1>Latest News</h1>
-    <ul>
-        <li>Politics</li>
-        <li>Sports</li>
-        <li>Tech</li>
-    </ul>
+    <header>
+        <img src="./images/logo-gdesnews.png" alt="GDES News red serif logo">
+        <h1>Latest News</h1>
+        <nav>
+            <ul>
+                <li>Politics    </li>
+                <li>Sports</li>
+                <li>Tech</li>
+            </ul>
+        </nav>
+    </header>
     <img src="./images/microchip.png" alt="">
     <h2>Revolutionary Quantum Smartphone Unveiled: Charges in a Fraction of a Second</h2>
     <p>
