H1 Lighter WEIGHT and FONT COLOR
I think "Latest News" is an h1 and it is Helvetica Regular but I did font weight to make it lighter bc idk how to apply directly the "Regular" weight. I made the font color what it is in XD

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <div class="">
+        <div class="top-logo">
         <img src="./images/logo-gdesnews.png" alt="GDES News red serif logo">
         </div>
-        <div class="">
+        <div class="top-title">
             <h1>Latest News</h1>
         </div>
         <nav>
