--- a/index.html
+++ b/index.html
@@ -23,21 +23,22 @@
         </nav>
     </header>
     <main>
-        <img src="./images/microchip.png" alt="">
-        <h2>Revolutionary Quantum Smartphone Unveiled: Charges in a Fraction of a Second</h2>
-        <p>
-        In a game-changing leap for mobile technology, a startup claims to have developed a quantum smartphone that can fully charge in just 0.00001 seconds. Users can say goodbye to battery anxiety and enjoy uninterrupted phone use for days on end. However, experts are skeptical about the practicality of this technology, given the current limitations of quantum computing.</p>
-        <img src="./images/pizza.png" alt="">
-        <h2>AI-Powered Robo-Pizza Chefs Are Taking Over the Fast Food Industry</h2>
-        <p>Pizza parlors across the nation are adopting AI-powered robotic chefs that can prepare and cook a pizza faster than ever before. These robots claim to deliver perfectly crisp crusts and evenly distributed toppings. But don’t fret, traditional pizzaiolos aren’t going extinct just yet – customers still seem to prefer that human touch when it comes to their favorite slice.</p>
-        <img src="./images/mars.png" alt="">
-        <h2>NASA’s New Space Elevator Will Reach Mars in Just 2 Hours</h2>
-        <p>In a groundbreaking announcement, NASA has revealed plans for a space elevator that will connect Earth to Mars in under two hours. With this technology, interplanetary travel will become as easy as riding an elevator. However, before you pack your bags for the Red Planet, experts caution that such a project would require unimaginable advancements in materials science and engineering.</p>
-        <img src="./images/coffee.png" alt="">
-        <h2>World’s First Mind-Reading Coffee Machine Brews Your Perfect Cup of Joe</h2>
-        <p>Imagine a world where your coffee machine knows exactly how you’re feeling and brews the perfect cup of coffee to match your mood. A new startup claims to have developed a coffee maker that can read your thoughts and preferences, delivering a customized caffeine experience. While it sounds enticing, critics argue that mind-reading technology of this caliber is far from being a reality.</p>
-        <h2>Internet 2.0 Unveiled: Downloading Physical Objects at the Speed of Light</h2>
-        <p>A tech company has announced Internet 2.0, a revolutionary upgrade that promises to allow users to download physical objects as easily as they download files online. While this sounds like science fiction come true, experts warn that it’s too early to ditch your Amazon Prime membership, as teleportation technology remains firmly in the realm of fantasy.</p>
+        <section>
+            <img src="./images/microchip.png" alt="">
+            <h2>Revolutionary Quantum Smartphone Unveiled: Charges in a Fraction of a Second</h2>
+            <p>In a game-changing leap for mobile technology, a startup claims to have developed a quantum smartphone that can fully charge in just 0.00001 seconds. Users can say goodbye to battery anxiety and enjoy uninterrupted phone use for days on end. However, experts are skeptical about the practicality of this technology, given the current limitations of quantum computing.</p>
+            <img src="./images/pizza.png" alt="">
+            <h2>AI-Powered Robo-Pizza Chefs Are Taking Over the Fast Food Industry</h2>
+            <p>Pizza parlors across the nation are adopting AI-powered robotic chefs that can prepare and cook a pizza faster than ever before. These robots claim to deliver perfectly crisp crusts and evenly distributed toppings. But don’t fret, traditional pizzaiolos aren’t going extinct just yet – customers still seem to prefer that human touch when it comes to their favorite slice.</p>
+            <img src="./images/mars.png" alt="">
+            <h2>NASA’s New Space Elevator Will Reach Mars in Just 2 Hours</h2>
+            <p>In a groundbreaking announcement, NASA has revealed plans for a space elevator that will connect Earth to Mars in under two hours. With this technology, interplanetary travel will become as easy as riding an elevator. However, before you pack your bags for the Red Planet, experts caution that such a project would require unimaginable advancements in materials science and engineering.</p>
+            <img src="./images/coffee.png" alt="">
+            <h2>World’s First Mind-Reading Coffee Machine Brews Your Perfect Cup of Joe</h2>
+            <p>Imagine a world where your coffee machine knows exactly how you’re feeling and brews the perfect cup of coffee to match your mood. A new startup claims to have developed a coffee maker that can read your thoughts and preferences, delivering a customized caffeine experience. While it sounds enticing, critics argue that mind-reading technology of this caliber is far from being a reality.</p>
+            <h2>Internet 2.0 Unveiled: Downloading Physical Objects at the Speed of Light</h2>
+            <p>A tech company has announced Internet 2.0, a revolutionary upgrade that promises to allow users to download physical objects as easily as they download files online. While this sounds like science fiction come true, experts warn that it’s too early to ditch your Amazon Prime membership, as teleportation technology remains firmly in the realm of fantasy.</p>
+        </section>
         <h2>Welcome to the North Idaho College Graphic and Web Design Program – where pixels become playgrounds and creativity knows no bounds!</h2>
         <img src="./images/gdes-classroom.png" alt="">
         <h2>About Us</h2>
