--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section class="top-half">
-            <div>
+            <div class="line-height-top">
             <img src="./images/microchip.png" alt="">
             <h2>Revolutionary Quantum Smartphone Unveiled: Charges in a Fraction of a Second</h2>
             <p>In a game-changing leap for mobile technology, a startup claims to have developed a quantum smartphone that can fully charge in just 0.00001 seconds. Users can say goodbye to battery anxiety and enjoy uninterrupted phone use for days on end. However, experts are skeptical about the practicality of this technology, given the current limitations of quantum computing.</p>
@@ -38,9 +38,11 @@
             <h2>World’s First Mind-Reading Coffee Machine Brews Your Perfect Cup of Joe</h2>
             <p>Imagine a world where your coffee machine knows exactly how you’re feeling and brews the perfect cup of coffee to match your mood. A new startup claims to have developed a coffee maker that can read your thoughts and preferences, delivering a customized caffeine experience. While it sounds enticing, critics argue that mind-reading technology of this caliber is far from being a reality.</p>
             </div>
+            <div class="line-height-bottom">
             <hr class="solid">
             <h2>Internet 2.0 Unveiled: Downloading Physical Objects at the Speed of Light</h2>
             <p>A tech company has announced Internet 2.0, a revolutionary upgrade that promises to allow users to download physical objects as easily as they download files online. While this sounds like science fiction come true, experts warn that it’s too early to ditch your Amazon Prime membership, as teleportation technology remains firmly in the realm of fantasy.</p>
+            </div>
         </section>
         <section class="bottom-half">
             <h2>Welcome to the North Idaho College Graphic and Web Design Program – where pixels become playgrounds and creativity knows no bounds!</h2>
@@ -52,7 +54,9 @@
             <h2>Code by Day, Create by Night</h2>
             <p>By day, we’re delving into the secrets of HTML, CSS, and JavaScript – the building blocks of the digital realm. By night, we’re conjuring up designs that’ll make your website stand out like a neon unicorn in a field of plain horses. We’re equal parts geeks and artists, and we’re proud of it!</p>
             <div>
-            <a href="link">Visit the GDES Program at NIC</a>
+                <div class="button-link-bottom">
+                    <a href="link">Visit the GDES Program at NIC</a>
+                </div>
             </div>
         </section>
     </main>
