made new WHITE LOGO, bg color, <p>
<p> color and center, the bg of footer is the red color. there is footer img for when I ad margin or flex etc

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         </section>
     </main>
     <footer>
-        <img src="./images/logo-gdesnews.png" alt="">
-        <p></p>
+        <img src="./images/logo-gdesnews-white.png" alt="">
+        <p>&copy 2023 NIC-GDES-252</p>
     </footer>
 </body>
 </html>
