--- a/index.html
+++ b/index.html
@@ -25,16 +25,21 @@
     <main>
         <section class="top-half">
             <div class="line-height-top">
-            <img src="./images/microchip.png" alt="">
+            <div class="micro-img">
+                <img src="./images/microchip.png" alt="">
+            </div>
             <h2>Revolutionary Quantum Smartphone Unveiled: Charges in a Fraction of a Second</h2>
             <p>In a game-changing leap for mobile technology, a startup claims to have developed a quantum smartphone that can fully charge in just 0.00001 seconds. Users can say goodbye to battery anxiety and enjoy uninterrupted phone use for days on end. However, experts are skeptical about the practicality of this technology, given the current limitations of quantum computing.</p>
-            <img src="./images/pizza.png" alt="">
+            <div class="micro-img">
+                <img src="./images/pizza.png" alt=""></div>
             <h2>AI-Powered Robo-Pizza Chefs Are Taking Over the Fast Food Industry</h2>
             <p>Pizza parlors across the nation are adopting AI-powered robotic chefs that can prepare and cook a pizza faster than ever before. These robots claim to deliver perfectly crisp crusts and evenly distributed toppings. But don’t fret, traditional pizzaiolos aren’t going extinct just yet – customers still seem to prefer that human touch when it comes to their favorite slice.</p>
-            <img src="./images/mars.png" alt="">
+            <div class="micro-img">
+                <img src="./images/mars.png" alt=""></div>
             <h2>NASA’s New Space Elevator Will Reach Mars in Just 2 Hours</h2>
             <p>In a groundbreaking announcement, NASA has revealed plans for a space elevator that will connect Earth to Mars in under two hours. With this technology, interplanetary travel will become as easy as riding an elevator. However, before you pack your bags for the Red Planet, experts caution that such a project would require unimaginable advancements in materials science and engineering.</p>
-            <img src="./images/coffee.png" alt="">
+            <div class="micro-img">
+                <img src="./images/coffee.png" alt=""></div>
             <h2>World’s First Mind-Reading Coffee Machine Brews Your Perfect Cup of Joe</h2>
             <p>Imagine a world where your coffee machine knows exactly how you’re feeling and brews the perfect cup of coffee to match your mood. A new startup claims to have developed a coffee maker that can read your thoughts and preferences, delivering a customized caffeine experience. While it sounds enticing, critics argue that mind-reading technology of this caliber is far from being a reality.</p>
             </div>
