--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <nav>
             <ul>
-                <li class="imactive-pill">Politics</li>
-                <li class="imactive-pill">Sports</li>
-                <li class="active-pill">Tech</li>
+                <li class="inactive-pill"><a href="#">Politics</a></li>
+                <li class="inactive-pill"><a href="#">Sports</a></li>
+                <li class="active-pill"><a href="#">Tech</a></li>
             </ul>
         </nav>
     </header>
@@ -30,15 +30,15 @@
             </div>
             <h2>Revolutionary Quantum Smartphone Unveiled: Charges in a Fraction of a Second</h2>
             <p>In a game-changing leap for mobile technology, a startup claims to have developed a quantum smartphone that can fully charge in just 0.00001 seconds. Users can say goodbye to battery anxiety and enjoy uninterrupted phone use for days on end. However, experts are skeptical about the practicality of this technology, given the current limitations of quantum computing.</p>
-            <div class="img-center">
+            <div class="img-center pizza-padding">
                 <img src="./images/pizza.png" alt=""></div>
             <h2>AI-Powered Robo-Pizza Chefs Are Taking Over the Fast Food Industry</h2>
             <p>Pizza parlors across the nation are adopting AI-powered robotic chefs that can prepare and cook a pizza faster than ever before. These robots claim to deliver perfectly crisp crusts and evenly distributed toppings. But don’t fret, traditional pizzaiolos aren’t going extinct just yet – customers still seem to prefer that human touch when it comes to their favorite slice.</p>
-            <div class="img-center">
+            <div class="img-center mars-padding">
                 <img src="./images/mars.png" alt=""></div>
             <h2>NASA’s New Space Elevator Will Reach Mars in Just 2 Hours</h2>
             <p>In a groundbreaking announcement, NASA has revealed plans for a space elevator that will connect Earth to Mars in under two hours. With this technology, interplanetary travel will become as easy as riding an elevator. However, before you pack your bags for the Red Planet, experts caution that such a project would require unimaginable advancements in materials science and engineering.</p>
-            <div class="img-center">
+            <div class="img-center coffee-padding">
                 <img src="./images/coffee.png" alt=""></div>
             <h2>World’s First Mind-Reading Coffee Machine Brews Your Perfect Cup of Joe</h2>
             <p>Imagine a world where your coffee machine knows exactly how you’re feeling and brews the perfect cup of coffee to match your mood. A new startup claims to have developed a coffee maker that can read your thoughts and preferences, delivering a customized caffeine experience. While it sounds enticing, critics argue that mind-reading technology of this caliber is far from being a reality.</p>
@@ -53,14 +53,14 @@
             <div class="color-height">
                 <h2>Welcome to the North Idaho College Graphic and Web Design Program – where pixels become playgrounds and creativity knows no bounds!</h2>
             </div>
-            <div class="img-center">
+            <div class="img-center classroom-padding">
                 <img src="./images/gdes-classroom.png" alt="">
             </div>
             <h2>About Us</h2>
             <p>Hey there, digital dreamer! We’re the wizards behind the web, the artists of the Adobe Suite, and the creative minds shaping pixels into perfection. Nestled in the picturesque heart of North Idaho, our Graphic and Web Design Program is where innovation meets inspiration.</p>
-            <h2>We Paint the Digital Canvas</h2>
+            <h2 class="h2-padding">We Paint the Digital Canvas</h2>
             <p>Imagine a world where every click is a masterpiece and every scroll is an adventure. That’s the world we’re crafting right here at NIC. With brushes in one hand and code in the other, we’re the modern-day Da Vincis of the internet age, turning blank screens into stunning symphonies of color and content.</p>
-            <h2>Code by Day, Create by Night</h2>
+            <h2 class="h2-padding">Code by Day, Create by Night</h2>
             <p>By day, we’re delving into the secrets of HTML, CSS, and JavaScript – the building blocks of the digital realm. By night, we’re conjuring up designs that’ll make your website stand out like a neon unicorn in a field of plain horses. We’re equal parts geeks and artists, and we’re proud of it!</p>
             <div>
                 <div class="button-link-bottom">
