--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <section class="grid-item-3">
             <div class="img-center mars-padding">
                 <img src="./images/mars.png" alt=""></div>
-                <h2>NASA’s New Space Elevator Will Reach Mars in Just 2 Hours</h2>
-                <p>In a groundbreaking announcement, NASA has revealed plans for a space elevator that will connect Earth to Mars in under two hours. With this technology, interplanetary travel will become as easy as riding an elevator. However, before you pack your bags for the Red Planet, experts caution that such a project would require unimaginable advancements in materials science and engineering.</p>
+                <h2 class="h2-margin">NASA’s New Space Elevator Will Reach Mars in Just 2 Hours</h2>
+                <p class="p-margin">In a groundbreaking announcement, NASA has revealed plans for a space elevator that will connect Earth to Mars in under two hours. With this technology, interplanetary travel will become as easy as riding an elevator. However, before you pack your bags for the Red Planet, experts caution that such a project would require unimaginable advancements in materials science and engineering.</p>
                 </section>
                 <section class="grid-item-4">
             <div class="img-center coffee-padding">
@@ -58,19 +58,25 @@
                 </div>
             </div>
         </section>
-        <section class="bottom-half">
-            <div class="color-height">
+        <section class="bottom-half grid">
+            <div class="color-height grid-item-bottom-1">
                 <h2>Welcome to the North Idaho College Graphic and Web Design Program – where pixels become playgrounds and creativity knows no bounds!</h2>
             </div>
-            <div class="img-center classroom-padding">
+            <div class="img-center classroom-padding grid-item-bottom-2">
                 <img src="./images/gdes-classroom.png" alt="">
             </div>
+            <div class="grid-item-bottom-">
                 <h2>About Us</h2>
                 <p>Hey there, digital dreamer! We’re the wizards behind the web, the artists of the Adobe Suite, and the creative minds shaping pixels into perfection. Nestled in the picturesque heart of North Idaho, our Graphic and Web Design Program is where innovation meets inspiration.</p>
+            </div>
+            <div class="grid-item-bottom-">
                 <h2 class="h2-padding">We Paint the Digital Canvas</h2>
                 <p>Imagine a world where every click is a masterpiece and every scroll is an adventure. That’s the world we’re crafting right here at NIC. With brushes in one hand and code in the other, we’re the modern-day Da Vincis of the internet age, turning blank screens into stunning symphonies of color and content.</p>
+                </div>
+                <div class="grid-item-bottom-">
                 <h2 class="h2-padding">Code by Day, Create by Night</h2>
                 <p>By day, we’re delving into the secrets of HTML, CSS, and JavaScript – the building blocks of the digital realm. By night, we’re conjuring up designs that’ll make your website stand out like a neon unicorn in a field of plain horses. We’re equal parts geeks and artists, and we’re proud of it!</p>
+                </div>
             <div>
                 <div class="button-link-bottom">
                     <a href="link">Visit the GDES Program at NIC</a>
