--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
         <section class="top-half grid">
             <section class="grid-item-1">
             <div class="img-center">
-                    <img src="./images/microchip.png" alt="">
+                    <img class="micro" src="./images/microchip.png" alt="golden-toned image of a close up of a microchip">
             </div>
                 <h2>Revolutionary Quantum Smartphone Unveiled: Charges in a Fraction of a Second</h2>
                 <p>In a game-changing leap for mobile technology, a startup claims to have developed a quantum smartphone that can fully charge in just 0.00001 seconds. Users can say goodbye to battery anxiety and enjoy uninterrupted phone use for days on end. However, experts are skeptical about the practicality of this technology, given the current limitations of quantum computing.</p>
                 </section>
                 <section class="grid-item-2">
             <div class="img-center pizza-padding">
-                <img class="pizza" src="./images/pizza.png" alt="">
+                <img class="pizza" src="./images/pizza.png" alt="sliced cheese pizza displaying only half of the full pizza to show some complimenting food like mini red tomatoes, a full orange tomatoe partially out of frame, and some greens.">
             </div>
                 <h2>AI-Powered Robo-Pizza Chefs Are Taking Over the Fast Food Industry</h2>
                 <p>Pizza parlors across the nation are adopting AI-powered robotic chefs that can prepare and cook a pizza faster than ever before. These robots claim to deliver perfectly crisp crusts and evenly distributed toppings. But don’t fret, traditional pizzaiolos aren’t going extinct just yet – customers still seem to prefer that human touch when it comes to their favorite slice.</p>
                 </section>
                 <section class="grid-item-3">
             <div class="img-center mars-padding">
-                <img src="./images/mars.png" alt=""></div>
+                <img class="mars" src="./images/mars.png" alt="the planet mars centered with a black background"></div>
                 <h2 class="h2-margin">NASA’s New Space Elevator Will Reach Mars in Just 2 Hours</h2>
                 <p class="p-margin">In a groundbreaking announcement, NASA has revealed plans for a space elevator that will connect Earth to Mars in under two hours. With this technology, interplanetary travel will become as easy as riding an elevator. However, before you pack your bags for the Red Planet, experts caution that such a project would require unimaginable advancements in materials science and engineering.</p>
                 </section>
                 <section class="grid-item-4">
             <div class="img-center coffee-padding">
-                <img src="./images/coffee.png" alt=""></div>
+                <img src="./images/coffee.png" alt="3 hot coffees with latte art in white mugs on a small dark dish; also has plants surrounding them"></div>
                 <h2>World’s First Mind-Reading Coffee Machine Brews Your Perfect Cup of Joe</h2>
                 <p>Imagine a world where your coffee machine knows exactly how you’re feeling and brews the perfect cup of coffee to match your mood. A new startup claims to have developed a coffee maker that can read your thoughts and preferences, delivering a customized caffeine experience. While it sounds enticing, critics argue that mind-reading technology of this caliber is far from being a reality.</p>
                 </section>
@@ -63,7 +63,7 @@
                 <h2>Welcome to the North Idaho College Graphic and Web Design Program – where pixels become playgrounds and creativity knows no bounds!</h2>
             </div>
             <div class="img-center classroom-padding grid-item-bottom-2">
-                <img src="./images/gdes-classroom.png" alt="">
+                <img src="./images/gdes-classroom.png" alt="a computer lab showing the screen of two students working">
             </div>
             <div class="grid-item-bottom-3">
                 <h2>About Us</h2>
@@ -85,7 +85,7 @@
         </section>
     </main>
     <footer>
-        <img src="./images/logo-gdesnews-white.png" alt="">
+        <img src="./images/logo-gdesnews-white.png" alt="GDES News white serif logo">
         <p>&copy 2023 NIC-GDES-252</p>
     </footer>
 </body>
